--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>First Valentine</title>
-    <meta name="description" content="A minimalist Valentine’s Day site" />
+    <title>Happy Valentine’s Day</title>
+    <link rel="icon" type="image/x-icon" href="/icon.ico">
+    <meta name="description" content="A small gift for you my baby girl." />
   </head>
   <body>
     <div id="root"></div>
